# tiny-soft-renderer

./: Cargo.toml  README.md
examples/: line.rs  obj_flat_shading.rs  obj_wireframe.rs  pixels_obj_wireframe.rs  playground.rs  triangle.rs
examples/common/: mod.rs  window_wrapper.rs
misc/docs/: build.md  examples.md
src/: color.rs  lib.rs  math.rs  model.rs  renderer.rs  texture.rs
src/math/: mat.rs  mod.rs  vec.rs
