[package]
name = "tiny-soft-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
sdl2 = { version = "0.36", features = ["bundled", "static-link"] }
anyhow = "1"

[dev-dependencies]
winit = {version = "0.29", features = ["rwh_05"]}

[[example]]
name = "playground"
path = "examples/playground.rs"
