[package]
name = "tiny-soft-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
rand = "0.8"
image = "0.24"
tobj = "4"
profiling = "1.0"

[dev-dependencies]
sdl2 = { version = "0.36", features = ["bundled", "static-link", "unsafe_textures"] }

[features]
profile-with-puffin = ["profiling/profile-with-puffin"]
profile-with-optick = ["profiling/profile-with-optick"]
profile-with-superluminal = ["profiling/profile-with-superluminal"]
profile-with-tracing = ["profiling/profile-with-tracing"]
profile-with-tracy = ["profiling/profile-with-tracy"]